--- a/style.css
+++ b/style.css
@@ -144,8 +144,13 @@ nav {
     position: absolute;
     color: white;
     font-size: 3vw;
-    opacity: 0.6;
+    opacity: 0;
     top: 50%;
+}
+
+.gallery_photos:hover .fa-solid {
+    opacity: 0.6;
+    transition: 0.5s;
 }
 
 .fa-chevron-left {
