--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2.7vh 3.25vw;  
+    margin: 1.5vh 3.25vw;  
     font-size: 1vw;
 }
 
@@ -68,10 +68,11 @@ nav {
 }
 
 .main_block_txt {
-    padding-top: 11.2vh;
+    padding: 10.38vh 4.88vw;
+    /* padding-top: 11.2vh;
     padding-left: 12.38vw;
     padding-right: 11.73vw;
-    padding-bottom: 15.2vh;
+    padding-bottom: 15.2vh; */
 }
 
 .main_h1 {
@@ -137,12 +138,69 @@ nav {
 }
 
 .gallery_photos {
-    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 200px;
+    position: relative;
+    width: 100%;
+}
+
+.photo {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.photo:hover .photo_txt {
+    opacity: 0.7;
+    transition: 0.5s;
+}
+
+.photo1 {
+    background-image: url(./pictures/camp.jpg);
+}
+
+.photo2 {
+    background-image: url(./pictures/campfire-cooking.png);
+}
+
+.photo3 {
+    background-image: url(./pictures/camping-dark-forest-light.jpg);
+}
+
+.photo4 {
+    background-image: url(./pictures/Bazaar.webp);
+}
+
+.photo_txt {
+    opacity: 0;
+    color: white;
+    text-align: center;
+}
+
+.photo_btns {
+    color: white;
+    border-color: white;
+    background-color: transparent;
+}
+
+.photo_txt h3 {
+    margin-bottom: 2vh;
+}
+
+/* .photo img {
+    width: 25vw;
+    height: ;
+    display: none;
+} */
+
+.gallery_photos {
+    /* margin: 0;
     height: 41.5vh;
     display: flex;
     vertical-align: top;
     position: relative;
-    overflow: hidden;
+    overflow: hidden; */
 }
 
 .fa-solid {
@@ -304,3 +362,23 @@ select {
 }
 
 /* border-bottom: 0.06vw solid rgb(220, 220, 220); */
+
+/* Footer  */
+
+footer {
+    border-top: 0.06vw solid rgb(220, 220, 220);
+    padding-top: 5vh;
+    text-align: center;
+}
+
+.footer_links {
+    margin-bottom: 2.77vw;
+}
+
+.footer_links img {
+    width: 1.822vw;
+    border: 0.06vw solid black;
+    margin: 0 0.32vw;
+    padding: 0.69vh 0.32vw;
+    border-radius: 5.85vw;
+}
